tests/bad_yamls/not_a_k8s_resource.yaml
namespaceList: ../../example_podlist/bookinfo_ns_list.json
podList: ../../example_podlist/bookinfo_deployments.yaml

networkConfigList:
  - name: istio-test-methods-4
    networkPolicyList:
      - bookinfo-policy-test-methods-4.yaml
---
# empty document
---
# non supported K8s object
apiVersion: v1
kind: Secret
metadata:
  name: dotfile-secret
data:
  .secret-file: dmFsdWUtMg0KDQo=
